@@ -70,6 +70,7 @@ NEWS
   * [mod_webdav] readdir POSIX compat (fixes #1826)
   * [mod_expire] reset caching response headers for error docs (fixes #1919)
   * [mod_status] page refresh option (fixes #2170)
+  * [mod_status] table w/ count of con states (fixes #2427)
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
